fix: fix  color contrast

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --color-text-muted: #c8cfdd;
 
   --color-yellow: #ffd500;
-  --color-pink: #ff2f68;
+  --color-pink: #AD002F;
   --color-yellow-hover: #dbb807;
   --color-pink-hover: #c72551;
 
